# amplifier-collections

./: README.md  pyproject.toml
docs/: AUTHORING.md  SPECIFICATION.md  USER_GUIDE.md
src/amplifier_collections/: __init__.py  discovery.py  exceptions.py  installer.py  lock.py  protocols.py  resolver.py  schema.py  utils.py
tests/: test_discovery.py  test_installer.py  test_lock.py  test_resolver.py  test_schema.py  test_update_refresh.py  test_utils.py
